@@ -14,6 +14,10 @@ AC_ARG_ENABLE(profiling,
 	[  --enable-profiling            compile with -pg options],
 	CFLAGS="$CFLAGS -pg"; CXXFLAGS="$CXXFLAGS -pg",
 	CFLAGS="$CFLAGS"; CXXFLAGS="$CXXFLAGS")
+AC_ARG_ENABLE(fortify,
+	[  --enable-fortify              compile with various gcc fortification options],
+	CFLAGS="$CFLAGS -D_FORTIFY_SOURCE=2 -fstack-protector-strong"; CXXFLAGS="$CXXFLAGS -D_FORTIFY_SOURCE=2 -fstack-protector-strong",
+	CFLAGS="$CFLAGS"; CXXFLAGS="$CXXFLAGS")
 
 CFLAGS="$SMALLCODE $CFLAGS"
 CXXFLAGS="$SMALLCODE $CXXFLAGS"
